// Vitest Snapshot v1

exports[`calculate simulations-professions-libérales > CIPAV ACRE 1`] = `
"dirigeant . indépendant . cotisations et contributions: 1221
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6221
impôt . montant: 0
protection sociale . retraite . base: 36
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 0
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 2`] = `
"dirigeant . indépendant . cotisations et contributions: 4544
dirigeant . rémunération . net: 20000
dirigeant . rémunération . net . après impôt: 19253
entreprise . chiffre d'affaires: 24544
impôt . montant: 747
protection sociale . retraite . base: 144
protection sociale . retraite . complémentaire: 95
protection sociale . retraite . trimestres: 2
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV ACRE 3`] = `
"dirigeant . indépendant . cotisations et contributions: 21074
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 71074
impôt . montant: 9172
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 291
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 1`] = `
"dirigeant . indépendant . cotisations et contributions: 32188
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47657
entreprise . chiffre d'affaires: 92188
impôt . montant: 12343
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 2`] = `
"dirigeant . indépendant . cotisations et contributions: 31471
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47662
entreprise . chiffre d'affaires: 91471
impôt . montant: 12338
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 3`] = `
"dirigeant . indépendant . cotisations et contributions: 31147
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47665
entreprise . chiffre d'affaires: 91147
impôt . montant: 12335
protection sociale . retraite . base: 410
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 4`] = `
"dirigeant . indépendant . cotisations et contributions: 33228
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47648
entreprise . chiffre d'affaires: 93228
impôt . montant: 12352
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 410
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 5`] = `
"dirigeant . indépendant . cotisations et contributions: 31410
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47663
entreprise . chiffre d'affaires: 91410
impôt . montant: 12337
protection sociale . retraite . base: 436
protection sociale . retraite . complémentaire: 409
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 6`] = `
"dirigeant . indépendant . cotisations et contributions: 1733
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2733
impôt . montant: 0
protection sociale . retraite . base: 71
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV conjoint collaborateur 7`] = `
"dirigeant . indépendant . cotisations et contributions: 34517
dirigeant . rémunération . net: 60000
dirigeant . rémunération . net . après impôt: 47638
entreprise . chiffre d'affaires: 94517
impôt . montant: 12362
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 410
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV exonération incapacité 1`] = `
"dirigeant . indépendant . cotisations et contributions: 7053
dirigeant . rémunération . net: 40000
dirigeant . rémunération . net . après impôt: 34024
entreprise . chiffre d'affaires: 47053
impôt . montant: 5976
protection sociale . retraite . base: 520
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 0"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 1`] = `
"dirigeant . indépendant . cotisations et contributions: 3434
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13434
impôt . montant: 0
protection sociale . retraite . base: 72
protection sociale . retraite . complémentaire: 48
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 2`] = `
"dirigeant . indépendant . cotisations et contributions: 21074
dirigeant . rémunération . net: 50000
dirigeant . rémunération . net . après impôt: 40828
entreprise . chiffre d'affaires: 71074
impôt . montant: 9172
protection sociale . retraite . base: 308
protection sociale . retraite . complémentaire: 291
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV réduction et surcotisation 3`] = `
"dirigeant . indépendant . cotisations et contributions: 46865
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72415
entreprise . chiffre d'affaires: 146865
impôt . montant: 27585
protection sociale . retraite . base: 311
protection sociale . retraite . complémentaire: 874
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 1`] = `
"dirigeant . indépendant . cotisations et contributions: 923
dirigeant . rémunération . net: 500
dirigeant . rémunération . net . après impôt: 500
entreprise . chiffre d'affaires: 1423
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 2
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 2`] = `
"dirigeant . indépendant . cotisations et contributions: 1024
dirigeant . rémunération . net: 1000
dirigeant . rémunération . net . après impôt: 1000
entreprise . chiffre d'affaires: 2024
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 5
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1124
dirigeant . rémunération . net: 1500
dirigeant . rémunération . net . après impôt: 1500
entreprise . chiffre d'affaires: 2624
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 7
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 4`] = `
"dirigeant . indépendant . cotisations et contributions: 1226
dirigeant . rémunération . net: 2000
dirigeant . rémunération . net . après impôt: 2000
entreprise . chiffre d'affaires: 3226
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 10
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 5`] = `
"dirigeant . indépendant . cotisations et contributions: 1846
dirigeant . rémunération . net: 5000
dirigeant . rémunération . net . après impôt: 5000
entreprise . chiffre d'affaires: 6846
impôt . montant: 0
protection sociale . retraite . base: 36
protection sociale . retraite . complémentaire: 24
protection sociale . retraite . trimestres: 3
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 6`] = `
"dirigeant . indépendant . cotisations et contributions: 3434
dirigeant . rémunération . net: 10000
dirigeant . rémunération . net . après impôt: 10000
entreprise . chiffre d'affaires: 13434
impôt . montant: 0
protection sociale . retraite . base: 72
protection sociale . retraite . complémentaire: 48
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 7`] = `
"dirigeant . indépendant . cotisations et contributions: 46865
dirigeant . rémunération . net: 100000
dirigeant . rémunération . net . après impôt: 72415
entreprise . chiffre d'affaires: 146865
impôt . montant: 27585
protection sociale . retraite . base: 311
protection sociale . retraite . complémentaire: 874
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > CIPAV échelle de revenu 8`] = `
"dirigeant . indépendant . cotisations et contributions: 244199
dirigeant . rémunération . net: 1000000
dirigeant . rémunération . net . après impôt: 527756
entreprise . chiffre d'affaires: 1244199
impôt . montant: 472244
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 1188
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 1`] = `
"dirigeant . indépendant . cotisations et contributions: 8084
dirigeant . rémunération . net: 21916
dirigeant . rémunération . net . après impôt: 20840
entreprise . chiffre d'affaires: 30000
impôt . montant: 1076
protection sociale . retraite . base: 159
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 2`] = `
"dirigeant . indépendant . cotisations et contributions: 8263
dirigeant . rémunération . net: 21737
dirigeant . rémunération . net . après impôt: 20689
entreprise . chiffre d'affaires: 30000
impôt . montant: 1048
protection sociale . retraite . base: 157
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > auxiliaire médical 3`] = `
"dirigeant . indépendant . cotisations et contributions: 63390
dirigeant . rémunération . net: 236610
dirigeant . rémunération . net . après impôt: 148282
entreprise . chiffre d'affaires: 300000
impôt . montant: 88328
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 1`] = `
"dirigeant . indépendant . cotisations et contributions: 11305
dirigeant . rémunération . net: 38695
dirigeant . rémunération . net . après impôt: 33086
entreprise . chiffre d'affaires: 50000
impôt . montant: 5609
protection sociale . retraite . base: 280
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > avocat 2`] = `
"dirigeant . indépendant . cotisations et contributions: 11685
dirigeant . rémunération . net: 38315
dirigeant . rémunération . net . après impôt: 32820
entreprise . chiffre d'affaires: 50000
impôt . montant: 5495
protection sociale . retraite . base: 277
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 1`] = `
"dirigeant . indépendant . cotisations et contributions: 4543
dirigeant . rémunération . net: 15457
dirigeant . rémunération . net . après impôt: 15456
entreprise . chiffre d'affaires: 20000
impôt . montant: 1
protection sociale . retraite . base: 112
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : entreprise . TVA . franchise de TVA . notification"
`;

exports[`calculate simulations-professions-libérales > expert-comptable 2`] = `
"dirigeant . indépendant . cotisations et contributions: 14704
dirigeant . rémunération . net: 35296
dirigeant . rémunération . net . après impôt: 30707
entreprise . chiffre d'affaires: 50000
impôt . montant: 4589
protection sociale . retraite . base: 256
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 1`] = `
"dirigeant . indépendant . cotisations et contributions: 14402
dirigeant . rémunération . net: 35598
dirigeant . rémunération . net . après impôt: 30920
entreprise . chiffre d'affaires: 50000
impôt . montant: 4678
protection sociale . retraite . base: 258
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 2`] = `
"dirigeant . indépendant . cotisations et contributions: 19804
dirigeant . rémunération . net: 30196
dirigeant . rémunération . net . après impôt: 27138
entreprise . chiffre d'affaires: 50000
impôt . montant: 3058
protection sociale . retraite . base: 220
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 3`] = `
"dirigeant . indépendant . cotisations et contributions: 88825
dirigeant . rémunération . net: 211175
dirigeant . rémunération . net . après impôt: 134293
entreprise . chiffre d'affaires: 300000
impôt . montant: 76882
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 4`] = `
"dirigeant . indépendant . cotisations et contributions: 108034
dirigeant . rémunération . net: 291966
dirigeant . rémunération . net . après impôt: 175922
entreprise . chiffre d'affaires: 400000
impôt . montant: 116044
protection sociale . retraite . base: 319
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 5`] = `
"dirigeant . indépendant . cotisations et contributions: 34647
dirigeant . rémunération . net: 85353
dirigeant . rémunération . net . après impôt: 64073
entreprise . chiffre d'affaires: 120000
impôt . montant: 21280
protection sociale . retraite . base: 310
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > médecin 6`] = `
"dirigeant . indépendant . cotisations et contributions: 14402
dirigeant . rémunération . net: 35598
dirigeant . rémunération . net . après impôt: 30920
entreprise . chiffre d'affaires: 50000
impôt . montant: 4678
protection sociale . retraite . base: 258
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 1`] = `
"dirigeant . indépendant . cotisations et contributions: 12271
dirigeant . rémunération . net: 37729
dirigeant . rémunération . net . après impôt: 32411
entreprise . chiffre d'affaires: 50000
impôt . montant: 5318
protection sociale . retraite . base: 273
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4"
`;

exports[`calculate simulations-professions-libérales > sage-femme 2`] = `
"dirigeant . indépendant . cotisations et contributions: 5126
dirigeant . rémunération . net: 14874
dirigeant . rémunération . net . après impôt: 14874
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 108
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 3`] = `
"dirigeant . indépendant . cotisations et contributions: 1343
dirigeant . rémunération . net: 2657
dirigeant . rémunération . net . après impôt: 2657
entreprise . chiffre d'affaires: 4000
impôt . montant: 0
protection sociale . retraite . base: 35
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 3
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable, dirigeant . indépendant . PL . CARCDSF . sage-femme . exonération PCV"
`;

exports[`calculate simulations-professions-libérales > sage-femme 4`] = `
"dirigeant . indépendant . cotisations et contributions: 5126
dirigeant . rémunération . net: 14874
dirigeant . rémunération . net . après impôt: 14874
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 108
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 5`] = `
"dirigeant . indépendant . cotisations et contributions: 5203
dirigeant . rémunération . net: 14797
dirigeant . rémunération . net . après impôt: 14797
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 107
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;

exports[`calculate simulations-professions-libérales > sage-femme 6`] = `
"dirigeant . indépendant . cotisations et contributions: 5280
dirigeant . rémunération . net: 14720
dirigeant . rémunération . net . après impôt: 14720
entreprise . chiffre d'affaires: 20000
impôt . montant: 0
protection sociale . retraite . base: 107
protection sociale . retraite . complémentaire: 0
protection sociale . retraite . trimestres: 4
Notifications affichées : dirigeant . indépendant . PL . CARCDSF . retraite complémentaire . cotisation forfaitaire . réduction applicable"
`;
